Challenge card alignment fixed

--- a/css/main_custom.scss
+++ b/css/main_custom.scss
@@ -4641,9 +4641,14 @@ div[style="width:100%;text-align:center;margin-top:10px;background-color:rgba(0,
   margin-top: 5rem !important;
 }
 
+.chalCard[style*="margin-left:20px"] {
+  margin-left: 0 !important;
+}
+
 .chalCard {
   background: var(--subBgST) !important;
   border-color: transparent !important;
+  width: calc(100% - 28px);
 
   .chalImgC {
     background: var(--subBgST) !important;
@@ -4652,7 +4657,7 @@ div[style="width:100%;text-align:center;margin-top:10px;background-color:rgba(0,
 
   .chalRight {
     margin-left: 30px !important;
-    width: 900px !important;
+    width: calc(100% - 153px) !important;
 
     font-family: var(--mainFont);
     font-size: 2.2rem;
